--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /node_modules
 
-config/auth.json
-config/firebase-key.jon
-/uploads
+/src/config/auth.json
+/src/config/firebase-key.json
+/uploads/*
